--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a class="mode" href="#" data-time="900">long break</a>
     </div>
     <div class="icons">
-      <i id="link" class="fa-solid fa-play"></i>
-      <i id="link" class="fa-solid fa-power-off"></i>
+      <i id="start" class="fa-solid fa-play"></i>
+      <i id="reset" class="fa-solid fa-power-off"></i>
     </div>
    
   </div>
